[gd_scene load_steps=5 format=3 uid="uid://6nc6as7jispf"]

[ext_resource type="Script" path="res://main.gd" id="1_a7efq"]
[ext_resource type="PackedScene" uid="uid://dje57y8bbu67u" path="res://player.tscn" id="1_tpl7k"]
[ext_resource type="PackedScene" uid="uid://bcxfa7psyyfio" path="res://mob.tscn" id="2_wx60r"]

[sub_resource type="Curve2D" id="Curve2D_8tl5x"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 478, 0, 0, 0, 0, 0, 477, 718, 0, 0, 0, 0, -2, 718, 0, 0, 0, 0, 0, 1)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_a7efq")
mob_scene = ExtResource("2_wx60r")

[node name="Player" parent="." instance=ExtResource("1_tpl7k")]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_8tl5x")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, 1)
rotation = -0.00209205

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
